WORKING 1.0: Update icons, manifest, styles, and popup logic
- Updated icon files for improved visuals.
- Removed unused resource from manifest.json to streamline the extension.
- Enhanced popup.css for better text visibility and added background color for clarity.
- Modified popup.js to handle folder view scenarios more effectively, disabling bulk download when necessary.

--- a/pdf-download/manifest.json
+++ b/pdf-download/manifest.json
@@ -38,7 +38,7 @@
   },
   "web_accessible_resources": [
     {
-      "resources": ["popup.html", "popup.css", "popup.js", "jspdf.umd.min.js"],
+      "resources": ["popup.html", "popup.css", "popup.js"],
       "matches": ["https://drive.google.com/*"]
     }
   ],
